<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet">


        <ImageView
            android:id="@+id/arrowImageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_dark_arrow"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin_34dp"
            android:layout_marginStart="@dimen/padding_16dp"
            android:layout_marginLeft="@dimen/padding_16dp" />


        <TextView
            android:id="@+id/descriptionTittleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginStart="@dimen/margin_20dp"
            android:textSize="@dimen/text_size_18sp"
            android:textColor="@color/gray"
            app:layout_constraintTop_toTopOf="@id/arrowImageView"
            app:layout_constraintBottom_toBottomOf="@id/arrowImageView"
            app:layout_constraintStart_toEndOf="@id/arrowImageView"
            android:layout_marginLeft="@dimen/margin_20dp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rectangleRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_23dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/arrowImageView"
            />


        <View
            android:id="@+id/lineView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/grey"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginStart="@dimen/padding_16dp"
            android:layout_marginEnd="@dimen/padding_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/originalPriceTextView"/>


        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_16dp"
            android:layout_marginBottom="@dimen/_33sdp"
            android:layout_marginEnd="@dimen/margin_17dp"
            android:layout_marginTop="@dimen/padding_16dp"
            android:textSize="@dimen/text_size_14sp"
            android:textColor="@color/gray"
            android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_at_pellentesque_aliquet_maecenas_massa_egestas_sapien_turpis_purus_mauris_vestibulum_augue_mattis_ut_laoreet_porta_vel_etiam_velit_leo_in_quam_et_in_leo_lectus_adipiscing_arcu_ut_ac_lectus_in_orci_pulvinar_dignissim_nulla_ut_arcu_vestibulum"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lineView"
            android:layout_marginLeft="@dimen/padding_16dp"
            android:layout_marginRight="@dimen/margin_17dp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addToCartButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_16dp"
            android:layout_marginLeft="@dimen/padding_16dp"
            android:layout_marginEnd="@dimen/padding_16dp"
            android:layout_marginRight="@dimen/padding_16dp"
            android:layout_marginBottom="@dimen/margin_18dp"
            android:background="@drawable/continue_button_bg"
            android:text="@string/add_to_cart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />


        <TextView
            android:id="@+id/medicineNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_17dp"
            android:layout_marginStart="@dimen/padding_16dp"
            android:text="@string/medicine_name"
            android:textSize="@dimen/text_size_18sp"
            android:textColor="@color/light_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rectangleRecyclerView"
            android:layout_marginLeft="@dimen/padding_16dp" />


        <TextView
            android:id="@+id/byCompanyNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_6dp"
            android:text="@string/by_company_name"
            android:textColor="@color/light_black"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintStart_toStartOf="@id/medicineNameTextView"
            app:layout_constraintTop_toBottomOf="@id/medicineNameTextView"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/reducedPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:text="@string/_120"
            android:textSize="@dimen/text_size_18sp"
            android:textColor="@color/green"
            app:layout_constraintStart_toStartOf="@id/byCompanyNameTextView"
            app:layout_constraintTop_toBottomOf="@id/byCompanyNameTextView"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/tabletsPackTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_1dp"
            android:layout_marginLeft="@dimen/margin_1dp"
            android:layout_marginTop="@dimen/margin_17dp"
            android:text="@string/_10_tablets_pack"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintStart_toEndOf="@id/reducedPriceTextView"
            app:layout_constraintTop_toBottomOf="@id/byCompanyNameTextView"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/originalPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5dp"
            android:text="@string/_140"
            android:textSize="@dimen/text_size_14sp"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="@id/reducedPriceTextView"
            app:layout_constraintTop_toBottomOf="@id/reducedPriceTextView"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/discountLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/off_button_bg"
            android:padding="@dimen/_5sdp"
            android:paddingStart="@dimen/_23sdp"
            android:paddingEnd="@dimen/_23sdp"
            android:text="@string/_20_off"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rectangleRecyclerView"
            android:layout_marginRight="@dimen/_15sdp" />


        <LinearLayout
            android:layout_marginTop="@dimen/_15sdp"
            android:id="@+id/quantity_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/quantity_bg"
            android:orientation="horizontal"
            android:layout_marginEnd="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/discountLabelTextView"
            android:layout_marginRight="@dimen/_15sdp">


            <ImageView
                android:id="@+id/minusButtonImageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="@dimen/_5sdp"
                android:paddingStart="@dimen/_10sdp"
                android:src="@drawable/ic_minus"
                android:paddingLeft="@dimen/_10sdp" />


            <TextView
                android:id="@+id/quantityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:text="1"
                android:textColor="@color/green"
                android:textSize="@dimen/_13sdp" />


            <ImageView
                android:id="@+id/plusButtonImageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="@dimen/_5sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:src="@drawable/ic__plus"
                android:paddingRight="@dimen/_10sdp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

