<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="@dimen/margin_34dp"
    android:layout_marginEnd="@dimen/_10sdp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/_2sdp"
    android:layout_marginRight="@dimen/_10sdp">


    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginTop="@dimen/_1sdp"
        android:background="@drawable/box_item_items"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/discount_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/discount_tag"
        android:text="@string/_10_off"
        android:paddingEnd="@dimen/_5sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_8sdp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingRight="@dimen/_5sdp" />

    <TextView
        android:id="@+id/medicine_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="start"
        android:text="@string/medicine_name"
        android:textColor="@color/light_black"
        android:textSize="@dimen/_10sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemImage"
        android:layout_marginLeft="@dimen/_5sdp" />

    <TextView
        android:id="@+id/Company_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_1sdp"
        android:text="Compamy Name"
        android:textColor="@color/light_black"
        android:textSize="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="@+id/medicine_name"
        app:layout_constraintStart_toStartOf="@+id/medicine_name"
        app:layout_constraintTop_toBottomOf="@+id/medicine_name" />

    <TextView
        android:id="@+id/medicine_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/rs"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/greenish"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="@id/medicine_name"
        app:layout_constraintStart_toStartOf="@id/medicine_name"
        app:layout_constraintTop_toBottomOf="@id/Company_name" />

</androidx.constraintlayout.widget.ConstraintLayout>